Layout issues

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,7 +3,7 @@ body{
 }
 #body {
 	width:480px;
-	height:250px;
+	height:280px;
 	border: 2px solid #000;
 } 
 #body:focus {
@@ -33,14 +33,14 @@ body{
 }
 #columns {
 	width: 800px;
-	height: 300px;
+	height: 340px;
 	float: left;
 }
 #content{
 	width: 800px;
 }
 ul li {
-	font-size: 10px;
+	font-size: 12px;
 	margin-bottom: 5px;
 }
 
